--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,7 +3,7 @@
 $primary-color: #16344d;
 $secondary-color: #ff957c;
 $home-image: url(../img/background.jpg);
-$background-opacity: 0.7;
+$background-opacity: 0.4;
 @mixin easeInOut {
     transition: all 0.2s ease-in-out;
 }
@@ -37,13 +37,23 @@ body {
 }
 
 #bg-img {
-    background: $primary-color;
     background: $home-image;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
     overflow: hidden;
     z-index: 0;
+
+    &:after {
+        content: '';
+        background: rgba($primary-color, $background-opacity);
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        position: absolute;
+    }
 }
 
 // Headings
@@ -54,6 +64,7 @@ h2 {
     &.greeting {
         font-size: 6rem;
     }
+
 }
 
 a {
@@ -169,6 +180,7 @@ main {
 // Contact Page
 #contact {
     background: lighten($primary-color, 40);
+    min-height: calc(70vh + 60px);
     overflow: hidden;
     h1 {
         text-align: center;
@@ -203,6 +215,7 @@ main {
 
 //Media Queries
 @include mediaMd {
+
     .navbar-nav {
         display: flex;
         justify-content: space-evenly;
@@ -210,6 +223,8 @@ main {
     #welcome-section {
         text-align: left;
         margin-left: 2rem;
+        line-height: 1;
+        height: 75vh;
     }
 }
 
