overflow:hidden removed from welcome page

--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -43,8 +43,7 @@ a {
 
 #welcome-section {
   text-align: center;
-  height: 100vh;
-  overflow: hidden; }
+  height: 100vh; }
   #welcome-section #intro {
     font-size: 2rem; }
 
