--- a/scss/main.scss
+++ b/scss/main.scss
@@ -139,24 +139,30 @@ ul.navbar-nav {
 
 
 // Project Page
-#project {
-    background: lighten($primary-color, 40);
-}
+// #project {
+//     background: lighten($primary-color, 40);
+// }
 
 .projects {
-    display: grid;
-    margin: 30px;
-    grid-template-columns: repeat(3, 400px);
-    grid-template-rows: 200px 200px;
-    grid-gap: 40px;
+    // display: grid;
+    // margin: 30px;
+    // grid-template-columns: repeat(3, 400px);
+    // grid-template-rows: 200px 200px;
+    // grid-gap: 40px;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px;
+    gap: 30px;
+    justify-content: space-evenly;
 }
 
 .project-tile {
-    box-shadow: 0 3px 3px black;
+    box-shadow: 0 1px 1px black;
+    border: $secondary-color 3px solid;
+    margin: 25px 0;
     
     img {
         width: 100%;
-        border: $secondary-color 3px solid;
         &:hover {
             opacity: 0.5;
             border-color: $secondary-color;
@@ -179,6 +185,8 @@ ul.navbar-nav {
 // Contact Page
 #contact {
     background: lighten($primary-color, 40);
+    
+
     h1 {
         text-align: center;
     }
@@ -188,8 +196,9 @@ ul.navbar-nav {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    align-items: center;
     margin-top: 1rem;
+    margin-left: 40px;
+    margin-right: 40px;
     
     div {
         font-size: 2rem;
@@ -211,7 +220,7 @@ ul.navbar-nav {
 
 section {
     &#work, &#contact  {
-        min-height: 500px; 
+        min-height: 700px; 
     }
     
 }
