--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -16,15 +16,6 @@ body {
   background-size: cover;
   overflow: hidden;
   z-index: 0; }
-  .bg-img:after {
-    content: '';
-    background: rgba(22, 52, 77, 0.4);
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    position: absolute; }
 
 h1,
 h2 {
@@ -42,14 +33,23 @@ a {
   color: #ff957c; }
 
 #welcome-section {
+  margin-top: 8rem;
   text-align: center;
   height: 100vh; }
   #welcome-section #intro {
     font-size: 2rem; }
 
+#navbar {
+  background: white;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  box-shadow: 0 2px 2px #16344d; }
+
 .nav-grid {
   display: grid;
-  margin: 10px 30px 0 30px;
+  padding: 10px 30px 0 30px;
   grid-gap: 10px;
   grid-template-columns: repeat(3, 1fr);
   z-index: 50; }
@@ -89,7 +89,6 @@ ul.navbar-nav {
   display: flex;
   flex-wrap: wrap;
   margin: 20px;
-  gap: 30px;
   justify-content: space-evenly; }
 
 .project-tile {
@@ -109,7 +108,8 @@ ul.navbar-nav {
   text-align: center; }
 
 #contact {
-  background: #5e9dd1; }
+  background: #5e9dd1;
+  width: 100%; }
   #contact h1 {
     text-align: center; }
 
@@ -117,14 +117,14 @@ ul.navbar-nav {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  margin-top: 1rem;
-  margin-left: 40px;
-  margin-right: 40px; }
+  margin-top: 8rem;
+  margin-left: 2.5rem;
+  margin-right: 2.5rem; }
   .contact-details div {
     font-size: 2rem;
     border: 3px #000 solid;
     padding: 0.5rem 1.5rem;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
     transition: all 0.2s ease-in-out; }
     .contact-details div:hover {
       background: #ff957c;
