--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,20 +9,6 @@ $background-opacity: 0.4;
 }
 
 
-// Media Query Mixins
-@mixin mediaSm {
-    @media screen and (max-width: 500px) {
-        @content;
-    }
-}
-
-@mixin mediaMd {
-    @media screen and (max-width: 768px) {
-        @content;
-    }
-}
-
-
 *,
 *:before,
 *:after {
@@ -37,23 +23,12 @@ body {
 }
 
 .bg-img {
-    background: $home-image;
+    background: $home-image;//#e4dddd;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
     overflow: hidden;
     z-index: 0;
-
-    &:after {
-        content: '';
-        background: rgba($primary-color, $background-opacity);
-        top: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-        position: absolute;
-    }
 }
 
 // Headings
@@ -78,6 +53,7 @@ a {
 
 // Body & Home page
 #welcome-section {
+    margin-top: 8rem;
     text-align: center;
     height: 100vh;
     #intro {
@@ -86,10 +62,18 @@ a {
 }
 
 // NavBar
+#navbar {
+    background: white;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    box-shadow: 0 2px 2px $primary-color;
+}
 
 .nav-grid {
     display: grid;
-    margin: 10px 30px 0 30px;
+    padding: 10px 30px 0 30px;
     grid-gap: 10px;
     grid-template-columns: repeat(3, 1fr);
     z-index: 50;
@@ -100,8 +84,7 @@ ul.navbar-nav {
     padding-right: 40px;
     color: black;    
     display: flex;
-    justify-content: space-evenly;
-    
+    justify-content: space-evenly; 
 }
 
 .nav-item {
@@ -137,12 +120,6 @@ ul.navbar-nav {
 }
 
 
-
-// Project Page
-// #project {
-//     background: lighten($primary-color, 40);
-// }
-
 .projects {
     // display: grid;
     // margin: 30px;
@@ -152,7 +129,6 @@ ul.navbar-nav {
     display: flex;
     flex-wrap: wrap;
     margin: 20px;
-    gap: 30px;
     justify-content: space-evenly;
 }
 
@@ -185,6 +161,7 @@ ul.navbar-nav {
 // Contact Page
 #contact {
     background: lighten($primary-color, 40);
+    width: 100%;
     
 
     h1 {
@@ -196,15 +173,15 @@ ul.navbar-nav {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin-top: 1rem;
-    margin-left: 40px;
-    margin-right: 40px;
+    margin-top: 8rem;
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
     
     div {
         font-size: 2rem;
         border: 3px #000 solid;
         padding: 0.5rem 1.5rem;
-        margin-bottom: 1rem;
+        margin-bottom: 1.5rem;
         @include easeInOut();
         &:hover {
             background: $secondary-color;
