--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -14,16 +14,17 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-  overflow: hidden; }
-  .bg-img::after {
-    content: '';
+  overflow: hidden;
+  position: relative; }
+  .bg-img .section-overlay {
+    content: '.';
     position: absolute;
     height: 100%;
     width: 100%;
     right: 0;
     top: 0;
     background: rgba(244, 244, 244, 0.79);
-    z-index: 1; }
+    z-index: 0; }
 
 h1,
 h2 {
@@ -89,11 +90,14 @@ ul.navbar-nav {
   border-bottom: #ff957c 3px solid; }
 
 #welcome-section {
-  margin-top: 8rem;
   text-align: center;
   height: 100vh; }
+  #welcome-section .welcome-section-text {
+    margin-top: 8rem; }
   #welcome-section #intro {
     font-size: 2rem; }
+    #welcome-section #intro .text-primary {
+      color: #16344d; }
   #welcome-section .social-icons-sm {
     list-style: none;
     text-align: left;
@@ -135,41 +139,42 @@ ul.navbar-nav {
   #contact h1 {
     text-align: center; }
 
-.contact-details .container {
-  border-radius: 5px;
-  max-width: 600px;
-  padding: 20px;
-  margin: auto; }
+.contact-details {
+  margin-top: 1rem; }
+  .contact-details .container {
+    border-radius: 5px;
+    max-width: 600px;
+    padding: 20px;
+    margin: auto; }
+  .contact-details input[type=text],
+  .contact-details input[type=email],
+  .contact-details textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ff957c;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical; }
+    .contact-details input[type=text]::placeholder,
+    .contact-details input[type=email]::placeholder,
+    .contact-details textarea::placeholder {
+      color: #888; }
+  .contact-details input[type=submit] {
+    background: #16344d;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    margin: 0 auto;
+    cursor: pointer; }
+    .contact-details input[type=submit]:hover {
+      background-color: #214f75; }
 
-.contact-details input[type=text],
-.contact-details input[type=email],
-.contact-details textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ff957c;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical; }
-  .contact-details input[type=text]::placeholder,
-  .contact-details input[type=email]::placeholder,
-  .contact-details textarea::placeholder {
-    color: #888; }
-
-.contact-details input[type=submit] {
-  background: #16344d;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  margin: 0 auto;
-  cursor: pointer; }
-  .contact-details input[type=submit]:hover {
-    background-color: #214f75; }
-
-section#work, section#contact {
-  min-height: 700px; }
+section#work span.text-secondary, section#contact span.text-secondary {
+  border-bottom: #16344d 3px solid;
+  padding: 0.5rem; }
 
 @media screen and (max-width: 500px) {
   .social-icons {
@@ -186,7 +191,9 @@ section#work, section#contact {
     margin-top: 10rem;
     margin-left: 2rem;
     line-height: 1.2;
-    height: 70vh; } }
+    height: 70vh; }
+    #welcome-section .welcome-section-text {
+      margin-left: 2rem; } }
 
 footer {
   text-align: center;
